fix: social links spcing and new line wrap

--- a/pages/[user]/User.module.scss
+++ b/pages/[user]/User.module.scss
@@ -86,10 +86,11 @@
 				padding: 0rem 0rem 1rem 0rem;
 			}
 			&__socials {
+				display: flex;
+				justify-content: space-between;
+				flex-wrap: wrap;
 				a {
-					&:not(:first-child) {
-						padding: 0rem 0rem 0rem 2.4rem;
-					}
+					padding: 0 1rem 0.5rem 1rem;
 					&:hover {
 						opacity: 0.4;
 					}
